2014-02-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/semaphore.c (AcquireSemaphoreInfo): Document that this
	function was deprecated.
	(LiberateSemaphoreInfo): Document that this function was
	deprecated.

2014-02-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/psd.c (RegisterPSDImage): Set PSD to UnstableCoderClass
	since its implementation is currently rather marginal.  It may
	even be that this coder deserves to be marked with the new
	BrokenCoderClass.  We are still looking for a volunteer to iron
	out the wrinkles in the PSD reader.

	* magick/magick.h (CoderClass): Added BrokenCoderClass to mark
	coders which often malfunction or are not very useful in their
	current condition.  Sometimes there is still hope that problems
	will be resolved and so the source file is not outright deleted.
	This setting allows us to mark and use coders which might
	malfunction by defining MAGICK_CODER_STABILITY=BROKEN in the
	environment while not causing danger for normal use.

2014-02-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/magick_wand.c: Documentation improvements for
	MagickSetInterlaceScheme() and MagickSetImageInterlaceScheme().
	Resolves SourceForge bug #262 "setImageInterlaceScheme doesn't
	make image progressive".

2014-02-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/{ps.c, ps2.c, ps3.c, pdf.c}: Only use resolution from
	image or -density if units was properly specified.  Without units,
	resolution is worthless.

	* coders/ps3.c (WritePS3Image): Use image resolution similar to PDF
	changes.

	* coders/ps2.c (WritePS2Image): Use image resolution similar to PDF
	changes.

	* coders/ps.c (WritePSImage): Use image resolution similar to PDF
	changes.

	* coders/pdf.c (WritePDFImage): Use resolution from image if it
	appears to be valid.  Resolves SourceForge issue #261 "PNG Pixel
	Density Not Preserved Converting to PDF".

	* magick/enum_strings.c (StringToResolutionType): New function to