@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020140214"
-#define public MagickPackageReleaseDate "snapshot-20140214"
+#define public MagickPackageVersionAddendum ".020140216"
+#define public MagickPackageReleaseDate "snapshot-20140216"
